2007-02-07  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/connect4-2players.xml.in: added diagonal in the help
	* boards/connect4.xml.in: -
	* src/boards/wordprocessor.c: (wordprocessor_create),
	(display_style_buttons), (display_style_selector),
	(display_color_style_selector), (save_buffer): improved. better layout, better save.

2007-02-05  Bruno coudoin  <bruno.coudoin@free.fr>

	- Improved the wordprocessor to save as xhtml instead of html

	* boards/gcompris/mimetypes/mime_type.xml.in:
	* src/boards/wordprocessor.c: (display_style_buttons),
	(save_buffer), (save_event):

2007-02-04  Bruno coudoin  <bruno.coudoin@free.fr>

	* Makefile.am: replace CVS by .svn
	* boards/mypaint.xml.in: Improved help
	* src/gcompris/gcompris.c: (main): fixed support for --config-dir and --user-dir
	* src/gcompris/properties.c: (gc_prop_new), (old_config_migration): -

2007-02-04  Yves Combe <yves@ycombe.net>

	add MyPaint brushes and wml.in

	* boards/Makefile.am:
	* boards/mypaint.xml.in:
	* boards/mypaint/brushes/b003.myb:
	* boards/mypaint/brushes/b004.myb:
	* boards/mypaint/brushes/b008.myb:
	* boards/mypaint/brushes/b016.myb:
	* boards/mypaint/brushes/basic.myb:
	* boards/mypaint/brushes/blur.myb:
	* boards/mypaint/brushes/bulk.myb:
	* boards/mypaint/brushes/charcoal.myb:
	* boards/mypaint/brushes/ink.myb:
	* boards/mypaint/brushes/loosedots.myb:
	* boards/mypaint/brushes/o000.myb:
	* boards/mypaint/brushes/o001.myb:
	* boards/mypaint/brushes/o005.myb:
	* boards/mypaint/brushes/o006.myb:
	* boards/mypaint/brushes/o007.myb:
	* boards/mypaint/brushes/o009.myb:
	* boards/mypaint/brushes/o011.myb:
	* boards/mypaint/brushes/o012.myb:
	* boards/mypaint/brushes/o013.myb:
	* boards/mypaint/brushes/o014.myb:
	* boards/mypaint/brushes/o015.myb:
	* boards/mypaint/brushes/o017.myb:
	* boards/mypaint/brushes/o018.myb:
	* boards/mypaint/brushes/o019.myb:
	* boards/mypaint/brushes/o020.myb:
	* boards/mypaint/brushes/o021.myb:
	* boards/mypaint/brushes/o022.myb: