@@ -1,3 +1,12 @@
+2007-02-09  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	- Replaced pixmap with GTK buttons for the Headings.
+
+	* src/boards/wordprocessor.c: (pause_board),
+	(display_style_buttons), (item_event),
+	(display_color_style_selector), (item_event_style_selection),
+	(item_event_color_style_selection), (escape), (save_buffer):
+
 2007-02-07  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	* boards/connect4-2players.xml.in: added diagonal in the help
